# streamlit-render

./: .gitignore  Dockerfile  LICENSE  README.md  dashboard.py  pyproject.toml  render.yaml  requirements.txt
ollama/: Dockerfile  entrypoint.sh
