[project]
name = "streamlit-dashboard"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
description = "A simple Streamlit dashboard for deployment on Render.com."
authors = [
    { name = "Your Name", email = "rb.bruins94@example.com" }
]
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "streamlit>=1.46.1",
]
